# galatiq-case-invoices

./: .env.example  .gitignore  Makefile  README.md  README_LOCAL.md  SOLUTION.md  app.py  config.py  eslint.config.mjs  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  results.csv  seed_db.py  setup_db.py  solution_overview.md  start.sh  streamlit_app.py
.streamlit/: config.toml
agents/: approval_agent.py  ingest_agent.py  ingestion_agent.py  payment_agent.py  validate_agent.py  validation_agent.py
backend/: agents.py  app.py  config.py  db.py  impossible.py  invoices.py  jobs.py  llm.py  middleware.py  payments.py  pipeline.py  review.py  schema.sql  schemas.py  seed.sql  service.py  statuses.py  unit_of_work.py  validation.py  wide_event.py
cli/: client.py
data/: generate_pdfs.py  make_test_invoices.py
docs/: prompt_templates.md
evals/: __init__.py  expectations.py  results.json  run_evals.py
frontend/: api.js  app.js  client.js  inbox.js  index.html  purchase-orders.html  purchase-orders.js  review.html  review.js  style.css  styles.css  ui.js  upload.html  upload.js  vendors.html  vendors.js  verification-bench.html  verification-bench.js
models/: invoice_models.py
orchestration/: invoice_workflow.py
schemas/: approval_decision.json  invoice_schema.json  validation_result.json
scripts/: check_import_tools.py  export_audit.py  generate_schemas.py  print_logs.py  seed_inventory.py
src/: __init__.py  app.py  audit.py  config.py  database.py  graph.py  llm_binding.py  llm_client.py  main.py  observability.py  ops_db.py  (+5 more)
(+57 files in other folders)
