[project]
name = "galatiq-case-invoices"
version = "0.1.0"
description = "Multi-agent invoice processing pipeline for the Galatiq FDE assessment"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.74",
    "langchain-core>=0.3.62",
    "langchain-openai>=0.2.14",
    "pdfplumber>=0.11.4",
    "SQLAlchemy>=2.0.41",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.5",
    "streamlit>=1.45.1",
    "typing_extensions>=4.12.0",
]

[project.optional-dependencies]
pdf-alt = ["pymupdf>=1.25.3"]
pdf-gen = ["fpdf2>=2.8.3"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
